src/css/custom.css
@font-face {
    font-family: 'Readex Pro';
    src: url('/static/fonts/readexpro-medium-webfont.woff2') format('woff2'),
    url('/static/fonts/readexpro-medium-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

body > iframe[style*="2147483647"]:not([id="webpack-dev-server-client-overlay"]) {
    display: none;
}

.main-wrapper {
    padding: 0 var(--global-padding);
}

/* You can override the default Infima variables here. */
:root {
    --ifm-color-primary: rgb(96, 148, 234);
    --ifm-color-primary-dark: rgb(33, 175, 144);
    --ifm-color-primary-darker: rgb(31, 165, 136);
    --ifm-color-primary-darkest: rgb(26, 136, 112);
    --ifm-color-primary-light: rgb(70, 203, 174);
    --ifm-color-primary-lighter: rgb(102, 212, 189);
    --ifm-color-primary-lightest: rgb(146, 224, 208);
    --ifm-code-font-size: 95%;

    --global-padding: 8rem;
}

.hero {
    padding: 4rem 0;
}

p, .contentContainer {
    color: ghostwhite;
    font-size: 18px;
    font-weight: 400;
    line-height: 2;
}

h1 {
    font-size: 2.2rem;
    margin-top: 2rem;
}

article header h1 {
    margin-top: 1rem;
    font-size: 2.5rem;
}

h2 {
    font-size: 1.8rem;
    margin-top: 1.5rem;
}

h4 {
    font-size: 1.25rem;
}

*, li, div {
    font-family: "Microsoft YaHei", "Readex Pro", "微軟正黑體", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
    font-weight: 500;
    font-style: normal;
    -webkit-font-smoothing: antialiased;
}

.menu__link--active, [aria-current="page"], [itemprop="name"] {
    font-weight: 600;
}

pre, code, code *, td {
    font-family: "Consolas", monospace, "Microsoft YaHei", "Readex Pro", sans-serif !important;
    font-weight: 500;
}

h1, h2, h3, h4 {
    color: white;
}

h1, h2, h2 > a, b, a.navbar__item, h3 > a, article > h3, strong, .breadcrumbs__link {
    font-weight: 700;
    font-family: "Readex Pro", "Noto Sans TC", "Microsoft YaHei", "微軟正黑體", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
}

h3, h4 {
    font-weight: 600;
}

article > * {
    text-align: left !important;
}

article img {
    height: auto !important;
    border-radius: 3px;
}

.navbar {
    padding: 0 var(--global-padding);
    z-index: 99999;
}

.navbar__logo > img {
    border-radius: 50%;
}

.main-wrapper .container.blog {
    max-width: 100%;
    padding: 0;
}

.docusaurus-highlight-code-line {
    background-color: rgba(0, 0, 0, 0.1);
    display: block;
    margin: 0 calc(-1 * var(--ifm-pre-padding));
    padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
    background-color: rgba(0, 0, 0, 0.3);
}

@media screen and (max-width: 996px) {
    .hero {
        padding: 0 !important;
    }

    .navbar-sidebar__brand {
        padding: 0 1.5rem;
    }
}

@media screen and (max-width: 1520px) {
    :root {
        --global-padding: 4rem;
    }
}

@media screen and (max-width: 1024px) {
    :root {
        --global-padding: 2rem;
    }

    .main-wrapper .container {
        padding: 0;
    }

    article header h1 {
        font-size: 2.5rem;
        margin-top: 0;
    }
}

@media screen and (max-width: 480px) {
    :root {
        --global-padding: 1rem;
    }

    h2 {
        font-size: 1.75rem;
    }

    article header h2 a {
        font-size: 2.5rem;
        line-height: 1;
    }
}

